--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,9 @@
   padding: 0;
 }
 html {
-  position: fixed;
+  overflow-x: hidden;
 }
 body {
-  position: fixed;
   overflow-x: hidden;
   font-family: "Campton SemiBold";
 }
@@ -69,17 +68,18 @@ nav ul li a:hover {
   position: relative;
 }
 .menu-toggle input {
+  display: block;
   position: absolute;
-  width: 40px;
+  width: 50px;
   height: 20px;
   opacity: 0;
-  left: 195px;
-  top: -1;
+  left: 90px;
+  top: -2px;
   cursor: pointer;
   z-index: 2;
 }
 .menu-toggle span {
-  margin-left: 200px;
+  margin-left: 100px;
   top: 20px;
   display: block;
   width: 28px;
